lustre/include/lustre/lustre_user.h
@@ -94,6 +94,7 @@ typedef struct stat64	lstat_t;
 #define LUSTRE_FIEMAP_FLAGS_COMPAT (FIEMAP_FLAG_SYNC | FIEMAP_FLAG_DEVICE_ORDER)
 
 enum obd_statfs_state {
+	OS_STATE_ONLINE		= 0x00000000,
         OS_STATE_DEGRADED       = 0x00000001, /**< RAID degraded/rebuilding */
         OS_STATE_READONLY       = 0x00000002, /**< filesystem is read-only */
         OS_STATE_RDONLY_1       = 0x00000004, /**< obsolete 1.6, was EROFS=30 */
